<resources>
    <string name="app_name">GameBank</string>

    <string name="bank_tab_title">Bank</string>
    <string name="trans_tab_title">Transactions</string>
    <string name="title_activity_lobby">Join Match</string>
    <string name="predefined_lobby_name">Empty Lobby</string>
    <string name="predefined_lobby_status">Not defined</string>
    <string name="devices_bluetooth_title">Bluetooth devices list</string>
    <string name="title_activity_create_match">Create a new match</string>
    <string name="room_name">Room name</string>
    <string name="member_number_description">Select the maximum number of members</string>
    <string name="open_lobby_button">Open lobby</string>
    <string name="start_match_button">Start!</string>
    <string name="hot_join_allowed">Allow hotjoin</string>
    <string name="status_member_not_ready">Not Ready</string>
    <string name="predefined_member_name">No one</string>
    <string name="status_member_ready">Ready</string>
    <string name="dialog_coarse_permission_title">Localization needed</string>
    <string name="dialog_coarse_permission_description">In some devices, the location is necessary in order to find nearby devices. Please enable it.</string>
    <string name="waiting_room_title">Waiting room</string>
    <string name="poke_action">Poke sent!</string>
    <string name="client_set_ready">Ready to start!</string>
    <string name="client_set_not_ready">Not ready to start!</string>
    <string name="start_lobby">Matchmaking</string>
    <string name="load_match">Load a match</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="username">Player username</string>
    <string name="title_activity_edit_text">EditText</string>
    <string name="edit_username">Edit username</string>
    <string name="warning_edit_input">Input cannot be empty!</string>
    <string name="set_username_description">You can choose a username on GameBank. This is the username the other players will see. Characters from a–z, 0–9 and underscores are allowed. The username can be long up to 15 characters.</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="host_disconnected_title">Host disconnected</string>
    <string name="host_disconnected_message">Connection interrupted by host</string>
    <string name="exiting_match_title">Disconnection alert!</string>
    <string name="exiting_match_message">You are leaving the match! Are you sure?</string>
    <string name="match">Match</string>
    <string name="loading">Loading…</string>
    <string name="waiting_host">Waiting for the host to start the match</string>
    <string name="load_match_activity_name">Load a saved match</string>
    <string name="players">Players</string>
    <string name="select_player_title">Send</string>
    <string name="to">to</string>
    <string name="transaction_quantity_label">Quantity:</string>
    <string name="your_balance">Your Balance</string>
    <string name="transaction_value">Transaction value:</string>
    <string name="bank_balance_insufficient">You balance is insufficient</string>
    <string name="date_label">Date:</string>
    <string name="bank_value_send_positive">Value transaction to other player must be greater than 0</string>
    <string name="bank_trans_zero">Transaction value cannot be 0</string>

</resources>
